# opencv_tester

./: CMakeCache.txt  CMakeLists.txt  HoughLines.cpp  Makefile  cmake_install.cmake  hough.hpp  image.cpp  image_h.hpp  main.cpp  point.hpp  point_text.hpp  point_tory.hpp  text.cpp  text_construct1.cpp  text_construct1.hpp  tory.cpp
src/: HoughLines.cpp  hough.hpp
